--- a/view/payment_profile_list.xml
+++ b/view/payment_profile_list.xml
@@ -2,6 +2,7 @@
 <!-- The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree string="Payment Profiles">
+    <field name="sequence"/>
     <field name="party"/>
     <field name="gateway"/>
     <field name="last_4_digits"/>
