Change color of records in transaction list view acc. to state #5576
Blue - in-progress, authorized and completed
Green - posted
Red - failed, cancel
Black(Default) - draft

--- a/view/transaction_list.xml
+++ b/view/transaction_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Transactions">
+<tree string="Transactions"
+        colors="If(In(Eval('state', ''), ['in-progress', 'authorized', 'completed']), 'blue', If(In(Eval('state', ''), ['failed', 'cancel']), 'red', If(Equal(Eval('state', ''), 'posted'), 'green', 'black')))">
     <field name="date"/>
     <field name="uuid"/>
     <field name="party"/>
