--- a/view/gateway_form.xml
+++ b/view/gateway_form.xml
@@ -15,7 +15,9 @@ this repository contains the full copyright notices and license terms. -->
     <field name="method"/>
     <label name="test"/>
     <field name="test"/>
-    <!-- Leave an empty notebook which future modules can update -->
     <notebook colspan="4">
+        <page string="Users" id="users">
+            <field name="users"/>
+        </page>
     </notebook>
 </form>
